PY-12360 More robust way to handle trailing continuation backslashes
Python lexer and parser can split whitespaces and attach them to different parents,
so we have to scan backward through consequtive leaf elements to collect all of them.

I also added several new tests for various such corner cases.